# agentic-bot

./: .gitignore  README.md  start_brain_tunnel.sh  telegram_request.rs  warehouse_bridge.yaml
esp32_drive/: esp32_drive.ino
god_led_suscriber/: god_led_suscriber.ino
src/: command_client.py
src/compressed_image_viewer/: CMakeLists.txt  package.xml
src/compressed_image_viewer/src/: compressed_image_viewer.cpp
src/r2d2_brain/: brain.py  gpt oss_Archieve.py  gpt_oss.py  sementic_map.py  view_map.py  vlm.py
src/r2d2_comms/: mapper_config.yaml  package.xml  setup.cfg  setup.py  start_mapping.launch.py
src/r2d2_comms/r2d2_comms/: json_viewer.py  local_image_sender.py  r2d2_bridge.py  r2d2_reciever.py
src/twist_stamper_pkg/: package.xml  setup.cfg  setup.py
src/twist_stamper_pkg/twist_stamper_pkg/: twist_stamper_node.py
